# zebra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clues.py  generate.py  ideas.md  javascript_solver.js  literals.py  puzzle.py  pyproject.toml  quag.toml  sat_utils.py  solver.py
.trunk/: trunk.yaml
src/: clues.py  elements.py  generate.py  literals.py  main.py  printers.py  puzzle.py  sat_utils.py  traptor_elements.py
src/examples/: einstein.py  quag.py
src/templates/: answer_format.html  preamble.html
test/: test_clues.py  test_generate.py  test_main.py  test_sat_utils.py
