[tool.poetry]
name = "zebra"
version = "0.1.0"
description = "Generator and solver for zebra puzzles"
authors = ["Tushar Chandra <me@tusharc.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.0"
pycosat = "^0.6.3"
pydantic = "^2.4.2"
rich = "^13.6.0"
questionary = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
pyright = "^1.1.335"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
preview = true

ignore = [
  "E501", # line length
]
select = [
  "F",
  "E",
  "W",
  "I",      # isort
  "RUF",    # ruff rules
  "N",      # pep8-naming
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "SIM",    # flake8-simplify
  "TID252", # tidy imports
  "UP",     # pyupgrade
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
